Added a new font style

--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.css
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: demeterFont;
-    src: url(../../fonts/Xolonium-Regular.otf);
+    src: url(../../fonts/Arimo-Regular.ttf);
 }
 .all-pages-container {
 	font-family: demeterFont;
