--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
@@ -2,10 +2,12 @@
 	margin-top: 10px;
 }
 .info-left-container {
+	text-align: left;
 	float:left;
 	margin: 10px;
 }
 .info-right-container {
+	text-align: left;
 	margin: 10px;
 	display: inline-block;
 }
