--- a/laravel/public/demeter/elements/dem-edit/dem-edit.css
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.css
@@ -49,6 +49,7 @@ paper-button.edit-button {
 	background:#2580a2;
 	color:white;
 	width:200px;
+	display:inline-block;
 }
 paper-button.edit-button:hover {
 	background: #354497;
