added new paper-dialog element also fixed a few other things.

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
@@ -8,7 +8,9 @@
 }
 .info-right-container {
 	text-align: left;
+	margin-left: 0px;
 	margin: 10px;
+	margin-right: 5px;
 	display: inline-block;
 }
 .info-button-container {
