--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
@@ -35,6 +35,8 @@ paper-button.info-button:hover {
 	font-size:12pt;
 	text-align:center;
 	line-height: 50px;
+	background:#2580a2;
+	color:white;
 }
 .info-delete-user-scroll-item:hover {
 	background: #99ccff;
