--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
@@ -29,15 +29,6 @@ paper-button.info-button:hover {
 	background:#354497;
 	border:1px solid black;
 }
-.info-delete-user-scroll-item {
-	width:100%;
-	height:50px;
-	font-size:12pt;
-	text-align:center;
-	line-height: 50px;
-	background:#2580a2;
-	color:white;
-}
 .info-delete-user-scroll-item:hover {
 	background: #99ccff;
 	color:white;
@@ -48,4 +39,17 @@ paper-button.info-button:hover {
 	font-size: 12pt;
 	border: 2px solid grey;
 	border-radius: 10px;
+}
+.scroll-box {
+	overflow:scroll;
+	height:200px;
+}
+paper-button.info-delete-user-scroll-item {
+	width:100%;
+	height:50px;
+	font-size:12pt;
+	text-align:center;
+	line-height: 50px;
+	background:#2580a2;
+	color:white;
 }
