--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
@@ -44,7 +44,7 @@ paper-button.info-button:hover {
 	overflow:scroll;
 	height:200px;
 }
-paper-button.info-delete-user-scroll-item {
+.info-delete-user-scroll-item {
 	width:100%;
 	height:50px;
 	font-size:12pt;
