--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
@@ -40,7 +40,7 @@ paper-button.info-button:hover {
 	overflow:scroll;
 	height:200px;
 }
-.info-delete-user-scroll-item {
+paper-material.info-delete-user-scroll-item {
 	width:100%;
 	height:50px;
 	font-size:12pt;
