--- a/laravel/public/demeter/elements/dem-create/dem-create.css
+++ b/laravel/public/demeter/elements/dem-create/dem-create.css
@@ -7,10 +7,11 @@
 	display: inline-block;
 	margin: 10px;
 	text-align: left;
+	line-height: 30px;
 }
 .create-right-side {
 	display: inline-block;
-	text-align: left;
+	text-align:left;
 	margin: 10px;
 }
 .create-database-card {
@@ -34,6 +35,7 @@
 	border:2px solid grey;
 	font-size: 10pt;
 	margin-left:10px;
+	margin: 5px;
 }
 paper-menu.dropdown-content {
 	/*font-size:12pt;
