--- a/laravel/public/demeter/elements/dem-help/dem-help.css
+++ b/laravel/public/demeter/elements/dem-help/dem-help.css
@@ -20,3 +20,10 @@
 	transition: width 1s;
 	cursor: pointer;
 }
+.customize-search {
+	width: 300px;
+	height: 40px;
+	font-size: 14pt;
+	float:right;
+	margin-right: 40px;
+}
