working on button css

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
@@ -57,3 +57,8 @@ paper-material.info-delete-user-scroll-item {
 	background: #99ccff;
 	color:white;
 }
+paper-button.changePassBtn {
+	font-size: 10pt;
+	height:40px;
+	width: 80px;
+}
