--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
@@ -60,6 +60,7 @@ paper-material.info-delete-user-scroll-item {
 paper-button.changePassBtn {
 	font-size: 8pt;
 	height:20px;
+	line-height: 20px;
 	width: 120px;
 }
 .info-right-container-instance {
