--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
@@ -56,6 +56,7 @@ paper-material.info-delete-user-scroll-item {
 .info-delete-user-scroll-item:hover {
 	background: #99ccff;
 	color:white;
+	cursor: pointer;
 }
 paper-button.changePassBtn {
 	font-size: 8pt;
