--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
@@ -61,6 +61,7 @@ paper-material.info-delete-user-scroll-item {
 paper-button.changePassBtn {
 	font-size: 8pt;
 	height:30px;
+	line-height: 10px;
 	width: 120px;
 	background: #2a94bb;
 	color: white;
