--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.css
@@ -9,7 +9,7 @@
 .info-right-container {
 	text-align: left;
 	margin-left: 0px;
-	margin: 10px;
+	margin: 5px;
 	margin-right: 5px;
 	display: inline-block;
 }
@@ -73,8 +73,11 @@ paper-button.changePassBtn:hover {
 .info-right-container-instance {
 	text-align: left;
 	margin-left: 0px;
-	margin: 10px;
+	margin: 5px;
 	margin-right: 5px;
 	margin-left:auto;
 	display: inline-block;
+
+	position: relative;
+	right:0;
 }
