--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.css
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.css
@@ -45,6 +45,12 @@ paper-button.toolbar-button-3 {
 	right:225px;
 	background:#2580a2;
 }
+paper-button.toolbar-button-4 {
+	position: absolute;
+	top:10px;
+	right:275px;
+	background:#2580a2;
+}
 paper-button.toolbar-button-3:hover{
 	background:#354497;
 }
