--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.css
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.css
@@ -48,8 +48,7 @@ paper-button.toolbar-button-3 {
 paper-button.toolbar-button-4 {
 	position: absolute;
 	top:10px;
-	right:275px;
-	background:#2580a2;
+	right:0;
 }
 paper-button.toolbar-button-3:hover{
 	background:#354497;
