--- a/laravel/public/demeter/elements/dem-home/dem-home.css
+++ b/laravel/public/demeter/elements/dem-home/dem-home.css
@@ -62,6 +62,13 @@ paper-progress.progress-bar {
 	border:1px solid grey;
 	background: #366caf;
 }
+paper-spinner.spinner {
+	position:absolute;
+	right:90px;
+	top:20px;
+	height:50px;
+	width:50px;
+}
 paper-button.refresh-button {
 	background:#2580a2;
 	color:white;
